apps/seedbox/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: seedbox
spec:
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 80
    targetPort: 9696
    protocol: TCP
