apps/seedbox/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: authentik
spec:
  parentRefs:
  - name: vlan200-gateway
    namespace: networking
  hostnames:
  - prowlarr.logikdev.fr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ak-outpost-main
      port: 9000
